--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -21,6 +21,6 @@
         </div>
     {{ end }}
     {{ .Content }}
-    <script src="https://micro.blog/conversation.js?url={{ .Permalink }}"></script>
+    <!-- <script src="https://micro.blog/conversation.js?url={{ .Permalink }}"></script> -->
 </article>
 {{ end }}
