--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -13,7 +13,7 @@
             {{ end }}
         {{ end }}
 	{{ end }}
-    {{ range where .Pages.ByDate.Reverse "Type" "post" }}
+    {{ range sort (where .Pages "Type" "post") "Date" "asc" }}
        <article class="h-entry {{ .Date.Format "2006" }}">
             {{ if .Title }}
                 <div class="post">
