--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -655,8 +655,13 @@
                         width: 100%;
                         max-width: min(450px, 100%);
                         max-height: min(550px, 75vh);
-                        display: block;
                         margin: 0px auto;
+                    }
+                    img:popover-open {
+                        height: unset;
+                        width: unset;
+                        max-width: 80vw;
+                        max-height: 80vh;
                     }
                     iframe, table {    
                         height: min(550px, 80vh);
@@ -676,7 +681,9 @@
             elBook.querySelectorAll(".page").forEach((page, idx) => {
                 page.style.setProperty("--i", idx);
                 page.addEventListener("click", (evt) => {
-                if (evt.target.closest("a")) return;
+                    if (evt.target.closest("a")) return;
+                    if (evt.target.closest("button")) return;
+                    if (evt.target.closest("input")) return;
                     const curr = evt.target.closest(".back") ? idx : idx + 1;
                     window.location.hash = curr;
                     elBook.style.setProperty("--c", curr);
