--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -74,7 +74,7 @@
         .hide-sm-block,.hide-sm-flex  {
             display: none !important;
         }
-        .read-more{
+        .read-more a {
             background: rgba(255, 230, 0, 0.6);
             padding: 3px 6px;
             border-radius: 3px;
