--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -79,6 +79,8 @@
             padding: 3px 6px;
             border-radius: 3px;
             line-height: 1.5;
+            margin-top: 1em;
+            display: block;
         }
         @media screen and (min-width: 1023px) 
         {
