--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -74,6 +74,9 @@
         .hide-sm-block,.hide-sm-flex  {
             display: none !important;
         }
+        .hide-lg-block  {
+            display: block !important;
+        }
         .read-more a {
             background: rgba(255, 230, 0, 0.6);
             padding: 3px 6px;
@@ -96,6 +99,9 @@
             }
             .hide-sm-flex {
                 display: flex !important;
+            }
+            .hide-lg-block  {
+                display: none !important;
             }
             /* FlipBook */
             body {
@@ -275,6 +281,8 @@
     </style>
 </head>
 <body>
+    <h1 class="hide-lg-block"><a href="https://heyloura.com">heyloura.com</a></h1>
+    <div class="hide-lg-block"><p><a href="/photos">Photos</a> | <a href="/archive">Archive</a></p></div>
     <p id="loading" style="position: absolute;
             display: block;
             width: 100%;
@@ -284,7 +292,7 @@
             text-align: center;
             background-color: canvas;">
             <progress></progress>
-        </p>
+    </p>
     <p class="hide-sm-block top-center">
             <b><a href="https://heyloura.com">heyloura.com</a></b><br/>
             Click to open book or use arrow keys <span class="ctrl">↑</span><span class="ctrl">↓</span> to flip pages
