flex div's up as well

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -397,6 +397,9 @@
         .front > div > p:last-child, .back > div > p:last-child {
             flex-grow: 1;
         }
+        .front > div > div:last-child, .back > div > div:last-child {
+            flex-grow: 1;
+        }
 
         .back > div > p:last-child:after {
             background-color: pink;
