--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -295,7 +295,8 @@
     </p>
     <p class="hide-sm-block top-center">
             <b><a href="https://heyloura.com">heyloura.com</a></b><br/>
-            Click to open book or use arrow keys <span class="ctrl">↑</span><span class="ctrl">↓</span> to flip pages
+            Click to open book or use arrow keys <span class="ctrl">↑</span><span class="ctrl">↓</span> to flip pages<br/>
+            <button onclick="window.location.hash = 1">first page</button> | <button onclick="window.location.hash = elBook.querySelectorAll('.page').length - 1">Last page</button>
         </p>
     <nav class="hide-sm-flex top-left">
         <p><b>Photo albums</b></p>
@@ -710,7 +711,7 @@
         document.getElementById("loading").remove();
 
         const flipBook = (elBook) => {
-            elBook.style.setProperty("--c", window.location.hash ? parseInt(window.location.hash.replace('#','')) : elBook.querySelectorAll(".page").length); // Set current page
+            elBook.style.setProperty("--c", window.location.hash ? parseInt(window.location.hash.replace('#','')) : 0); // Set current page
             elBook.querySelectorAll(".page").forEach((page, idx) => {
                 page.style.setProperty("--i", idx);
                 page.addEventListener("click", (evt) => {
