--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -296,7 +296,7 @@
     <p class="hide-sm-block top-center">
             <b><a href="https://heyloura.com">heyloura.com</a></b><br/>
             Click to open book or use arrow keys <span class="ctrl">↑</span><span class="ctrl">↓</span> to flip pages<br/>
-            <button onclick="window.location.hash = 1">first page</button> | <button onclick="window.location.hash = elBook.querySelectorAll('.page').length - 1">Last page</button>
+            <button onclick="window.location.hash = 1">first page</button> | <button onclick="window.location.hash = document.querySelector('.flip-book').querySelectorAll('.page').length - 1">Last page</button>
         </p>
     <nav class="hide-sm-flex top-left">
         <p><b>Photo albums</b></p>
